[package]
name = "axum-sse-gzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = {version = "1.3.2", features = ["v4"]}
async-std = "1.12.0"
futures-util = "0.3.28"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace", "compression-full"] }

[profile.release]
lto = true
opt-level = 3